--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   smooth_page_indicator: ^1.1.0
   dotted_line: ^3.2.2
+  dartz: ^0.10.1
+  dio: ^5.3.2
+  get_it: ^7.6.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
