--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   dio: ^5.3.2
   get_it: ^7.6.4
   shared_preferences: ^2.2.1
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
