--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   shared_preferences: ^2.2.1
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
-
+  cached_network_image: ^3.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
